--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   flutter_cube: ^0.1.1
+  gap: ^2.0.0
 
 dev_dependencies:
   flutter_test:
