--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter_cube: ^0.1.1
   gap: ^2.0.0
+  flutter_svg: ^0.22.0
+  url_launcher: ^6.0.10
 
 dev_dependencies:
   flutter_test:
@@ -41,7 +43,7 @@ dev_dependencies:
 # The following section is specific to Flutter.
 flutter:
   assets:
-    - assets/usagi_v1.obj
+    - assets/
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
