--- a/web/manifest.json
+++ b/web/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "site2021",
-    "short_name": "site2021",
+    "name": "teshi.dev",
+    "short_name": "teshi.dev",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#0175C2",
