--- a/web/manifest.json
+++ b/web/manifest.json
@@ -3,7 +3,7 @@
     "short_name": "teshi.dev",
     "start_url": ".",
     "display": "standalone",
-    "background_color": "#0175C2",
+    "background_color": "#80CBC4",
     "theme_color": "#80CBC4",
     "description": "A new Flutter project.",
     "orientation": "portrait-primary",
