--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   gap: ^2.0.0
   flutter_svg: ^0.22.0
   url_launcher: ^6.0.10
+  auto_size_text: ^3.0.0
 
 dev_dependencies:
   flutter_test:
