--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   flutter_svg: ^2.0.5
   url_launcher: ^6.0.10
   auto_size_text: ^3.0.0
+  web: ^0.5.0
 
 dev_dependencies:
   flutter_lints: ^3.0.0
